--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "test-only": "NODE_PRESERVE_SYMLINKS=1 jest --forceExit --detectOpenHandles",
     "test-debug": "NODE_PRESERVE_SYMLINKS=1 jest",
     "test-ts": "tsc --noEmit",
-    "jest": "jest",
-    "test": "npm run test-ts && npm run test-u"
+    "jest": "jest"
   },
   "dependencies": {
     "@types/uuid": "^8.3.0",
+    "babel-jest": "^29.4.3",
+    "dotenv": "^16.0.3",
+    "dotenv-flow": "^3.2.0",
     "uuid": "^8.3.0"
   },
   "prettier": {
@@ -33,7 +35,7 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.6.0",
     "jest": "^26.6.3",
-    "nock": "^13.0.11",
+    "nock": "^13.3.0",
     "ts-jest": "^26.4.0",
     "ts-node-dev": "1.1.6",
     "typescript": "^4.2.3"
