--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-jest": "^29.4.3",
     "dotenv": "^16.0.3",
     "dotenv-flow": "^3.2.0",
+    "mongodb-memory-server": "^9.1.6",
     "uuid": "^8.3.0"
   },
   "prettier": {
@@ -23,7 +24,7 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.24",
     "@types/node": "^18.15.10",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -40,5 +41,10 @@
     "ts-jest": "^26.4.0",
     "ts-node-dev": "1.1.6",
     "typescript": "^4.2.3"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "latest"
+    }
   }
 }
